--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,50 @@
-body{
-background: -webkit-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-  background: -o-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-  background: -moz-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-  background: linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-
+body {
+	width: 100wh;
+	height: 90vh;
+	color: #fff;
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
 }
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
 .loc a{
   max-width:100px;
   color:#32CD32;
