--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,36 @@ body {
 	}
 }
 
+div.scrolling-limit{
+  width: 600px;
+  height: 50px;
+  background:linear-gradient(70deg,#ded,#fff,#efe);
+  overflow:hidden;
+  white-space:nowrap;
+   border-radius:20px;
+  font-family: "Comic Sans MS";
+
+  
+}
+
+div.scrolling{
+  font-family: "Comic Sans MS";
+  position: relative;
+  -webkit-animation: scroll 20s infinite linear;;
+  -moz-animation: scroll 20s infinite linear;
+  -o-animation: scroll 20s infinite linear;
+  animation: scroll 20s infinite linear;
+}
+
+@keyframes scroll{
+    0%   {left: 500px;}
+    100% {left: -950px;}
+}
+@-webkit-keyframes scroll{
+    0%   {left: 500px;}
+    100% {left: -950px;}
+}
+
 .loc a{
   max-width:100px;
   color:#32CD32;
